--- a/serverless.yml
+++ b/serverless.yml
@@ -15,24 +15,13 @@ provider:
     BUCKET: ${self:custom.${self:provider.stage}.bucket}
     URL: ${self:custom.${self:provider.stage}.url}
     REGION: 'us-east-1'
+  deploymentBucket:
+    name: serverless-${self:provider.stage}-deployment-bucket
   stage: ${opt:stage, 'stage'}
   region: ${self:provider.environment.REGION}
 
 # you can add statements to the Lambda function's IAM Role here
   iamRoleStatements:
-    - Effect: "Allow"
-      Action:
-        - "s3:ListBucket"
-      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-    - Effect: "Allow"
-      Action:
-        - "s3:PutObject"
-      Resource:
-        Fn::Join:
-          - ""
-          - - "arn:aws:s3:::"
-            - "Ref" : "ServerlessDeploymentBucket"
-            - "/*"
     - Effect: "Allow"
       Action:
         - "s3:PutObject"
